--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
   body
     block navContent
       nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
-        a.navbar-brand(href='/app') Dashboard
+        a.navbar-brand(href='/') Home
 
         div.collapse.navbar-collapse#navbarsExampleDefault
           ul.navbar-nav.mr-auto
