--- a/views/todo/create.pug
+++ b/views/todo/create.pug
@@ -1,8 +1,9 @@
-extends layout
+extends ../layout
+
 block content
   div.container#contain
     h1= title
-    form(action="/app/create", method="post")
+    form(action="/todo/create", method="post")
       .form-group
         label(for="firstName") First Name
         input(type="text", name="firstName").form-control#firstName
